# metalmax

./: LICENSE.txt  README.md  settings.gradle
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.h  charsets.cpp  charsets.h  global.cpp  global.h  logic.cpp  logic.h  metalmax.cpp  metalmax.h  native_gl.cpp  native_gl.h  native_sles.cpp  native_sles.h  palette_data.h  perf.cpp  perf.h
app/src/main/cpp/audio/: mm_sound.h  native_sles.cpp  native_sles.h  native_sound.cpp  native_sound.h  opensl.cpp  opensl.h
app/src/main/cpp/charset/: charsets.cpp  charsets.h
app/src/main/cpp/computer/: computer_data.cpp  computer_data.h
app/src/main/cpp/graphic/: bitmap_render.cpp  bitmap_render.h  graphic_process.cpp  graphic_process.h  native_gl.cpp  native_gl.h  native_graphic.cpp  native_graphic.h  palette.cpp  palette_data.h
app/src/main/cpp/item/: human_equipment.cpp  human_equipment.h  human_tools.cpp  human_tools.h  tank_equipment.cpp  tank_equipment.h  tank_tools.cpp  tank_tools.h
app/src/main/cpp/logic/: base_menu.cpp  base_menu.h  logic.cpp  logic.h  render.h  render_base_menu.cpp  render_base_menu.h  render_battle.cpp  render_battle.h  render_computer.cpp  render_computer.h  render_debug.cpp  render_debug.h  render_map.cpp  render_map.h  render_menu.cpp  render_menu.h  render_splash.cpp  render_splash.h  render_sprite.cpp  render_sprite.h
app/src/main/cpp/logic/status/: character.cpp  character.h  player.cpp  player.h
app/src/main/cpp/maps/: active_tile_bmp.cpp  active_tile_bmp.h  map.cpp  map.h  map_pos.cpp  map_pos.h  palette.cpp  tile_bmp.cpp  tile_bmp.h
app/src/main/cpp/maps/map_data/: map_0.cpp  map_0.h  map_00.cpp  map_00.h  map_01.cpp  map_01.h  map_02.cpp  map_02.h  map_03.cpp  map_03.h  map_04.cpp  map_04.h  map_05.cpp  map_05.h  map_06.cpp  map_06.h  map_07.cpp  map_07.h  map_08.cpp  map_08.h  map_09.cpp  map_09.h  (+480 more)
app/src/main/cpp/monster/: monster.cpp  monster.h  monster_0.cpp  monster_0.h
app/src/main/cpp/opt/: matrix.cpp  matrix.h  matrix_mul_neo.h  matrix_mul_neo.s  mem_opt.h  memcpy.S
app/src/main/cpp/sound/: mm_sound.c
app/src/main/cpp/splash/: logo.cpp  logo.h  logo_2.cpp  logo_2.h  set_name.cpp  set_name.h  splash.cpp  splash.h
app/src/main/cpp/sprite/: sprite.cpp  sprite.h  sprite_1.cpp  sprite_1.h  sprite_bmp.cpp  sprite_player.cpp  sprite_player.h
app/src/main/cpp/store/: store_data.cpp  store_data.h
app/src/main/cpp/tank/: tank_data.cpp  tank_data.h
app/src/main/cpp/vcm/: group.cpp  value.cpp  vcm.h  vcm_ui.h
app/src/main/cpp/xgm/: debugout.h  version.h  xgm.h
(+434 files in other folders)
